--- a/XOR_PyTorch.ipynb
+++ b/XOR_PyTorch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMNy5w6WhAeKX+nOEdLNRgR"
+      "authorship_tag": "ABX9TyMkiPZyyDvDoeWeI9YTXPxF"
     },
     "kernelspec": {
       "name": "python3",
@@ -395,7 +395,7 @@
         "        0,\n",
         "        torch.exp(-torch.tensor(0.1*epoch)),\n",
         "        size=(2,),\n",
-        "        device=device) # schedule a noise to make good fit\n",
+        "        device=device) # noise with variance schedule to make good fit\n",
         "\n",
         "    source = source.to(device) + noise_\n",
         "    target = target.to(device)\n",
